--- a/css/style.css
+++ b/css/style.css
@@ -158,7 +158,7 @@ a {
 
 .progress-section
 {    
-    margin-top: 7%;
+    margin-top: 1%;
     text-align: left;
     
 }
@@ -202,8 +202,7 @@ a {
 
   
   .hexagon-gallery {
-    margin: auto;
-    margin-top: 50px;
+    margin: auto;    
     max-width: 1000px;
     display: grid;
     grid-template-columns: repeat(8, 1fr);
@@ -288,19 +287,48 @@ a {
   {
       height: 25rem;
       width: 85%;
-      padding:0.8% 0 0.8% 0 ;
       margin: auto;
-      background: linear-gradient(to right, #424242, rgb(0, 97, 100));      
+      background-color: rgb(42, 44, 44);
+      /* background: linear-gradient(to right, #424242, rgb(0, 97, 100));       */
       vertical-align: middle;      
   }
   .card-body
   {    
-    width: 98%; 
-    margin: auto;    
-    border-radius: 5px;
-   display: flex;
+    padding:0;    
+    backface-visibility: hidden;
   }
- .card-body:nth-child(1){    
-    background-image: url(/assets/images/triptoe-background.PNG);
-    background-size: cover;
+
+  .middle {
+    transition: .5s ease;
+    opacity: 0;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    -ms-transform: translate(-50%, -50%);
+    text-align: center;
   }
+  .card-img
+  {
+    transition: 0.5s ease;
+  }
+  .card-body:hover .card-img {
+    transition: .5s ease;
+    opacity: 0.1;
+  }
+  
+  .card-body:hover .middle {
+    opacity: 1;
+  }
+  
+  .text {
+    background-color: #04AA6D;
+    color: white;
+    font-size: 16px;
+    padding: 16px 32px;
+  }
+  .card-btn:hover
+  {
+    background-color: rgb(0, 97, 100);
+  }
+ 
