--- a/css/style.css
+++ b/css/style.css
@@ -1,334 +1,496 @@
+:root {
+  --copper: #FF9839;
+}
 
 body {
-    margin: 0;
-    padding: 0;
-    background-color: rgb(42, 44, 44);
-    overflow-x: hidden;
+  margin: 0;
+  padding: 0;
+  background-color: rgb(42, 44, 44);
+  overflow-x: hidden;
 }
 
 .container-fluid {
-    margin: 0;
-    padding: 0;
-    background-color: rgb(42, 44, 44);
+  margin: 0;
+  padding: 0;
+  background-color: rgb(42, 44, 44);
 
 }
+
 .element {
-    height: 100vh;
-    width: 100vw;
-    overflow-x: hidden;            
+  height: 100vh;
+  width: 100vw;
+  overflow-x: hidden;
 }
 
 canvas {
-position:absolute;
-top:0;
-left:0;        
-width: 100%;
-height: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
 
 }
 
 .myname {
-    position: relative;
-    text-align: center;
-    z-index: 1;
-    padding-top: 17%;
-    margin-left: auto;
-    margin-right: auto;
-    width: 35rem;
-    height: 60vh;
-    font-family: 'Lato', sans-serif;
-    font-weight: bolder;
-    color: rgb(168, 166, 166);
+  position: relative;
+  text-align: center;
+  z-index: 1;
+  padding-top: 17%;
+  margin-left: auto;
+  margin-right: auto;
+  width: 35rem;
+  height: 60vh;
+  font-family: 'Lato', sans-serif;
+  font-weight: bolder;
+  color: #DCDBDB;
 }
-
+.heading {
+  color: #DCDBDB;
+  font-size: 50px;
+  margin-bottom: 0;
+}
 .highlight {
-    color: rgb(219, 10, 45);
+  color: #FF9839;
 }
 
 .btn {
-    border: 2px solid grey;
+  border: 2px solid grey;
+}
+
+.btn:hover {
+  background-color: var(--copper);
+  color: #000;
 }
 
 /* background-color: #CC005F; */
-.btn:hover {
-    background-color: rgb(219, 10, 45);
-    font-weight: 600;
-    transition: 0.1s;
+.btn-canvas {
+  color: var(--copper);
+  font-weight: 900;
+}
+
+.btn-canvas:hover {
+  background-color: var(--copper);
+  border: 3px solid #fff;
+  color: #2a2c2c;
+  font-weight: bolder;
+  transition: 0.1s;
+}
+
+.canvas-btn-text:hover {
+  color: #2a2c2c !important;
+  font-weight: bold;
 }
 
 .btn:hover .arrow {
-    transform: rotate(90deg);
-    transition: 0.5s;
+  transform: rotate(90deg);
+  transition: 0.5s;
 }
 
 .arrow {
-    -webkit-transition: all 0.3s ease;
-    -moz-transition: all 0.3s ease;
-    -o-transition: all 0.3s ease;
-    -ms-transition: all 0.3s ease;
-    transition: all 0.3s ease;
+  -webkit-transition: all 0.3s ease;
+  -moz-transition: all 0.3s ease;
+  -o-transition: all 0.3s ease;
+  -ms-transition: all 0.3s ease;
+  transition: all 0.3s ease;
 }
 
 .texttype1 {
-    font-size: 20px;
-    color: rgb(192, 189, 189);
-    padding: 0;
-    margin: 0;
+  font-size: 20px;
+  color: rgb(192, 189, 189);
+  padding: 0;
+  margin: 0;
+}
+
+.nav-body {
+  padding-left: 5%;
+  background-color: black;
+  /* border-bottom: 1px solid var(--copper); */
 }
 
 .navbar {
-    padding: 0 0 0 5%;
-    z-index: 100;
+  margin: 0;
+  padding: 0;
+  z-index: 100;
+  position: sticky;
+  top: 0;
 }
 
-
+.navbar-brandd {
+  height: 25px;
+  width: 25px;
+}
 
 a {
-    text-decoration-line: none;
+  text-decoration-line: none;
+  font-weight: bolder;
 }
 
 .nav-link {
-    color: rgb(192, 189, 189);
+  color: rgb(192, 189, 189);
 }
 
 .nav-link:hover {
-    color: rgb(219, 10, 45);
+  color: var(--copper) !important;
 }
 
 .nav-link:focus {
-    color: rgb(219, 10, 45);
-    transition: 3s;
+  color: var(--copper);
+  transition: 3s;
 }
 
 .nav-btnn {
-    margin-bottom: 0;
-    margin-top: 3px;
-    margin-right: 30px;
+  margin-bottom: 0;
+  margin-top: 3px;
+  margin-right: 30px;
+}
+
+.about-me {   
+  padding-top: 4%;
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.about-me>div {  
+  height: 90%;
+  margin: 10px;
+  text-align: center;
+}
+.about-me-description
+{
+  width: 50%;
+}
+.about-me-image
+{
+  width: 45%;
+}
+.about-me-cards {
+  justify-content: center;
+  flex-direction: row;
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.about-me-card-body {
+  padding: 10px;
+  border: 2px solid var(--copper);
+  border-radius: 10px;
+  width: 47%;
+  margin-left: 15px;
+
+}
+.profile-image
+{
+  height: 100%;
+  width: 100%;
 }
 
 
+@media only screen and (max-width: 600px) {
+  .myname {
+    margin-left: -17%;
+    top: 30%;
+  }
+
+  .navbar-toggler {
+    margin-bottom: 10px;
+  }
+
+  .navbar-dark .navbar-toggler {
+    color: #000;
+    border: none;
+  }
+
+  .about-me>div {
+    width: 100%;
+    height: 100%;
+  }
+  
+  .about-me-card-body
+  {
+    width: 95%;
+    margin: 0 0 10px 0;
+  }
+  
+
+
+
+
+
+
+/* =================================== */
 .section-height {
-    height: 100vh;
+  height: 100vh;
 }
 
 .hr-below-nav {
-    padding: 0;
-    margin: 0;
-    border: 2px solid rgb(250, 0, 0);
-    background-color: rgb(250, 0, 0);
-    width: 98vw;
-    margin-left: auto;
-    margin-right: auto;
-    border-bottom: 3px solid rgb(248, 0, 41);
-    position: sticky;
-    top: 7%;
-    z-index: 99;
+  padding: 0;
+  margin: 0;
+  border: 2px solid var(--copper);
+  background-color: var(--copper);
+  width: 100vw;
+  margin-left: auto;
+  margin-right: auto;
+  border-bottom: 3px solid var(--copper);
+  z-index: 99;
 
 }
 
-.navbar {
-    position: sticky;
-    top: 0;
+.about-row {
+  margin-left: 50px;
 }
 
 .profile {
-    text-align: center;
-    color: rgb(168, 166, 166);
-    font-weight: 300;    
+  text-align: center;
+  color: #DCDBDB;
+  font-weight: 300;
 }
 
-.heading {
-    color: rgb(168, 166, 166);
-    font-size: 50px;
-    margin-bottom: 0;
-}
+
 
 .profile-highlight {
-    font-family: 'Raleway', sans-serif;
+  font-family: 'Raleway', sans-serif;
+}
+
+.speciality-box {
+  padding: 20px;
+  border: 1px solid var(--copper);
+  border-radius: 30px;
+  width: 45%;
+
+}
+
+.speciality-box:nth-child(1) {
+  margin-right: 30px;
 }
 
 .row {
-    padding-top: 5%;
+  padding-top: 5%;
 }
 
-#skills-section
-{
-    min-height: 110vh;
+#skills-section {
+  min-height: 110vh;
 }
 
-.progress-section
-{    
-    margin-top: 1%;
-    text-align: left;
-    
-}
-.bar
-{
-    padding: 0;
-    width: 90%;       
-    border: 2px solid #fff;
-    margin-bottom: 2.5%; 
-    margin-left: auto;  
-    margin-right: auto;
-    
-}
-.bar:hover
-{
-    box-shadow: 4px 4px 7px rgb(0, 0, 0);    
-    
-}
-
-.bar-fill
-{   
-    height: 100%;
-    background-color: rgb(0, 97, 100);
-    display: inline-block;
-    text-align: center; 
-    padding-top: 5px;  
-}
-.bar-text
-{
-    display: inline;
-    color: azure;
-    font-weight: 500;   
-    
-}
-.comb-container
-{
-    padding: 5% 0 0 0;    
-    margin-top: 0%;
-    position: relative;
-}
-
-  
-  .hexagon-gallery {
-    margin: auto;    
-    max-width: 1000px;
-    display: grid;
-    grid-template-columns: repeat(8, 1fr);
-    grid-auto-rows: 200px;
-    grid-gap: 14px;
-    padding-bottom: 50px;
-  }
-  
-  .hex {
-    display: flex;
-    position: relative;
-    width: 100%;
-    height: 100%;    
-    background-color: #424242;
-    -webkit-clip-path: polygon(50% 0%, 100% 25%, 100% 75%, 50% 100%, 0% 75%, 0% 25%);
-    clip-path: polygon(50% 0%, 100% 25%, 100% 75%, 50% 100%, 0% 75%, 0% 25%);
-  }
-  .hex:hover {    
-    
-    -webkit-transform: scale(1.1);
-    -ms-transform: scale(1.1);
-    transform: scale(1.025);    
-}
-.hex-img{
-    width: 50%;
-    height: 50%;
-    margin: auto;   
-  }
-
-.hex-img:hover
-{
-    animation: bounce;
-    animation-duration: 0.5s;
+.progress-section {
+  margin-top: 1%;
+  text-align: left;
 
 }
-  
-  .hex:first-child {
-    grid-row-start: 1;
-    grid-column: 3 / span 2;
-  }
-  
-  .hex:nth-child(2) {
-    grid-row-start: 1;
-    grid-column: 5 / span 2;
-  }
-  
-  .hex:nth-child(3) {
-    grid-row-start: 2;
-    grid-column: 2 / span 2;
-  }
-  
-  .hex:nth-child(4) {
-    grid-row-start: 3;
-    grid-column: 3 / span 2;
-  }
-  .hex:nth-child(7) {
-    grid-row-start: 3;
-    grid-column: 5 / span 2;
-  }
-  
-  .hex:nth-child(5) {
-    grid-row-start: 2;
-    grid-column: 4 / span 2;
-  }
-  
-  .hex:nth-child(6) {
-    grid-row-start: 2;
-    grid-column: 6 / span 2;
+
+.bar {
+  padding: 0;
+  width: 90%;
+  border: 2px solid #fff;
+  margin-bottom: 2.5%;
+  margin-left: auto;
+  margin-right: auto;
+
+}
+
+.bar:hover {
+  box-shadow: 4px 4px 7px rgb(0, 0, 0);
+
+}
+
+.bar-fill {
+  height: 100%;
+  background-color: rgb(0, 97, 100);
+  display: inline-block;
+  text-align: center;
+  padding-top: 5px;
+}
+
+.bar-text {
+  display: inline;
+  color: azure;
+  font-weight: 500;
+
+}
+
+.comb-container {
+  padding: 5% 0 0 0;
+  margin-top: 0%;
+  position: relative;
+}
+
+
+.hexagon-gallery {
+  margin: auto;
+  max-width: 1000px;
+  display: grid;
+  grid-template-columns: repeat(8, 1fr);
+  grid-auto-rows: 200px;
+  grid-gap: 14px;
+  padding-bottom: 50px;
+}
+
+.hex {
+  display: flex;
+  position: relative;
+  width: 100%;
+  height: 100%;
+  background-color: #424242;
+  -webkit-clip-path: polygon(50% 0%, 100% 25%, 100% 75%, 50% 100%, 0% 75%, 0% 25%);
+  clip-path: polygon(50% 0%, 100% 25%, 100% 75%, 50% 100%, 0% 75%, 0% 25%);
+}
+
+.hex:hover {
+
+  -webkit-transform: scale(1.1);
+  -ms-transform: scale(1.1);
+  transform: scale(1.025);
+}
+
+.hex-img {
+  width: 50%;
+  height: 50%;
+  margin: auto;
+}
+
+.hex-img:hover {
+  animation: bounce;
+  animation-duration: 0.5s;
+
+}
+
+.hex:first-child {
+  grid-row-start: 1;
+  grid-column: 3 / span 2;
+}
+
+.hex:nth-child(2) {
+  grid-row-start: 1;
+  grid-column: 5 / span 2;
+}
+
+.hex:nth-child(3) {
+  grid-row-start: 2;
+  grid-column: 2 / span 2;
+}
+
+.hex:nth-child(4) {
+  grid-row-start: 3;
+  grid-column: 3 / span 2;
+}
+
+.hex:nth-child(7) {
+  grid-row-start: 3;
+  grid-column: 5 / span 2;
+}
+
+.hex:nth-child(5) {
+  grid-row-start: 2;
+  grid-column: 4 / span 2;
+}
+
+.hex:nth-child(6) {
+  grid-row-start: 2;
+  grid-column: 6 / span 2;
+}
+
+#portfolio-section {
+
+  height: 110vh;
+  text-align: center;
+}
+
+.portfolio-container {
+  padding-top: 5%;
+}
+
+.card {
+  height: 25rem;
+  width: 85%;
+  margin: auto;
+  background-color: rgb(42, 44, 44);
+  /* background: linear-gradient(to right, #424242, rgb(0, 97, 100));       */
+  vertical-align: middle;
+}
+
+.card-body {
+  padding: 0;
+  backface-visibility: hidden;
+}
+
+.middle {
+  transition: .5s ease;
+  opacity: 0;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  -ms-transform: translate(-50%, -50%);
+  text-align: center;
+}
+
+.card-img {
+  height: 100%;
+  width: 99%;
+  transform: scale(1);
+  transition: 0.5s ease;
+}
+
+.card-bodyy:hover .card-img {
+  transition: .5s ease;
+  opacity: 0.1;
+}
+
+.card-bodyy:hover .middle {
+  opacity: 1;
+}
+
+.texttype1 {
+  color: white;
+  font-size: 16px;
+}
+
+.project-row {
+  height: 550px;
+}
+
+.card-bodyy {
+  background-color: rgb(42, 44, 44);
+  height: 80%;
+  width: 100%;
+  margin: auto;
+  position: relative;
+  border-left: 3px solid rgb(119, 119, 119);
+  border-right: 3px solid rgb(119, 119, 119);
+}
+
+.card-bodyy::before {
+  content: "";
+  background-color: #a8a6a6;
+  height: 15%;
+  width: 101.8%;
+  position: absolute;
+  left: -0.9%;
+  top: -15%;
+  border-radius: 20px 20px 0 0;
+  border-top: 5px solid rgb(119, 119, 119, 0.5);
+  border-left: 5px solid rgb(119, 119, 119, 0.5);
+  border-right: 5px solid rgb(119, 119, 119, 0.5);
+}
+
+.card-bodyy::after {
+  content: "";
+  background-color: #a8a6a6;
+  height: 16%;
+  width: 101.8%;
+  top: 100%;
+  left: -0.9%;
+  position: absolute;
+  border-radius: 0 0 20px 20px;
+  border-bottom: 5px solid rgb(119, 119, 119, 0.5);
+  border-left: 5px solid rgb(119, 119, 119, 0.5);
+  border-right: 5px solid rgb(119, 119, 119, 0.5);
+}
+
+@media only screen and (min-width: 768px) {
+  .element {
+    height: 100vh;
+    width: 100vw;
+    overflow-x: hidden;
   }
 
-  #portfolio-section
-  {
-
-    height: 110vh;
-    text-align: center;
-  }
-  .portfolio-container
-  {
-      padding-top: 5%;
-  }  
-  .card
-  {
-      height: 25rem;
-      width: 85%;
-      margin: auto;
-      background-color: rgb(42, 44, 44);
-      /* background: linear-gradient(to right, #424242, rgb(0, 97, 100));       */
-      vertical-align: middle;      
-  }
-  .card-body
-  {    
-    padding:0;    
-    backface-visibility: hidden;
-  }
-
-  .middle {
-    transition: .5s ease;
-    opacity: 0;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    -ms-transform: translate(-50%, -50%);
-    text-align: center;
-  }
-  .card-img
-  {
-    transition: 0.5s ease;
-  }
-  .card-body:hover .card-img {
-    transition: .5s ease;
-    opacity: 0.1;
-  }
-  
-  .card-body:hover .middle {
-    opacity: 1;
-  }
-  
-  .text {
-    background-color: #04AA6D;
-    color: white;
-    font-size: 16px;
-    padding: 16px 32px;
-  }
-  .card-btn:hover
-  {
-    background-color: rgb(0, 97, 100);
-  }
- 
+}
