--- a/css/style_test.css
+++ b/css/style_test.css
@@ -1,276 +1,21 @@
-body {
+*
+{
     margin: 0;
-    padding: 0;
-    background-color: rgb(42, 44, 44);
+    padding:0;
+    box-sizing: border-box;
+}
+body
+{
     overflow-x: hidden;
-}
-
-.container-fluid {
-    margin: 0;
-    padding: 0;
     background-color: rgb(42, 44, 44);
-
 }
 
-.element {
-    height: 100vh;
-    width: 100vw;
-    overflow-x: hidden;
-}
-
-canvas {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-
-}
-
-.myname {
-    position: relative;
-    text-align: center;
-    z-index: 1;
-    padding-top: 17%;
-    margin-left: auto;
-    margin-right: auto;
-    width: 35rem;
-    height: 60vh;
-    font-family: 'Lato', sans-serif;
-    font-weight: bolder;
-    color: rgb(168, 166, 166);
-}
-
-.highlight {
-    color: rgb(219, 10, 45);
-}
-
-.btn {
-    border: 2px solid grey;
-}
-
-/* background-color: #CC005F; */
-.btn:hover {
-    background-color: rgb(219, 10, 45);
-    font-weight: 600;
-    transition: 0.1s;
-}
-
-.btn:hover .arrow {
-    transform: rotate(90deg);
-    transition: 0.5s;
-}
-
-.arrow {
-    -webkit-transition: all 0.3s ease;
-    -moz-transition: all 0.3s ease;
-    -o-transition: all 0.3s ease;
-    -ms-transition: all 0.3s ease;
-    transition: all 0.3s ease;
-}
-
-.texttype1 {
-    font-size: 20px;
-    color: rgb(192, 189, 189);
-    padding: 0;
-    margin: 0;
-}
-
-.navbar {
-    padding: 0 0 0 5%;
-    z-index: 100;
-}
-
-
-
-a {
-    text-decoration-line: none;
-}
-
-.nav-link {
-    color: rgb(192, 189, 189);
-}
-
-.nav-link:hover {
-    color: rgb(219, 10, 45);
-}
-
-.nav-link:focus {
-    color: rgb(219, 10, 45);
-    transition: 3s;
-}
-
-.nav-btnn {
-    margin-bottom: 0;
-    margin-top: 3px;
-    margin-right: 30px;
-}
-
-
-.section-height {
+section
+{
     height: 100vh;
 }
-
-.hr-below-nav {
-    padding: 0;
-    margin: 0;
-    border: 2px solid rgb(250, 0, 0);
-    background-color: rgb(250, 0, 0);
-    width: 98vw;
-    margin-left: auto;
-    margin-right: auto;
-    border-bottom: 3px solid rgb(248, 0, 41);
-    position: sticky;
-    top: 7%;
-    z-index: 99;
-}
-
-.navbar {
-    position: sticky;
-    top: 0;
-}
-
-.profile {
-    text-align: center;
-    color: rgb(168, 166, 166);
-    font-weight: 300;
-}
-
-.heading {
-    font-size: 50px;
-    margin-bottom: 0;
-}
-
-.profile-highlight {
-    font-family: 'Raleway', sans-serif;
-}
-
-.row {
-    padding-top: 5%;
-}
-
-#skills-section {
-    min-height: 110vh;
-}
-
-.progress-section {
-    margin-top: 4%;
-    text-align: left;
-
-}
-
-.bar {
-    padding: 0;
-    width: 90%;
-    border: 2px solid #fff;
-    margin-bottom: 2.5%;
-    margin-left: auto;
-    margin-right: auto;
-
-}
-
-.bar:hover {
-    box-shadow: 4px 4px 7px rgb(0, 0, 0);
-    -webkit-transform: scale(1.1);
-    -ms-transform: scale(1.1);
-    transform: scale(1.025);
-}
-
-.bar-fill {
-    height: 100%;
-    background-color: rgb(0, 97, 100);
-    display: inline-block;
-    text-align: center;
-    padding-top: 5px;
-}
-
-.bar-text {
-    display: inline;
-    color: azure;
-    font-weight: 500;
-
-}
-
-.comb-container {
-    padding: 0;
-    margin-top: 0%;
-    position: relative;
-}
-
-.hex-img{
-    width: 50%;
-    height: 50%;
-    margin: auto;   
-  }
-  
-  .hexagon-gallery {
-    margin: auto;
-    margin-top: 50px;
-    max-width: 1000px;
-    display: grid;
-    grid-template-columns: repeat(8, 1fr);
-    grid-auto-rows: 200px;
-    grid-gap: 14px;
-    padding-bottom: 50px;
-  }
-  
-  .hex {
-    display: flex;
-    position: relative;
-    width: 100%;
-    height: 100%;    
-    background-color: #424242;
-    -webkit-clip-path: polygon(50% 0%, 100% 25%, 100% 75%, 50% 100%, 0% 75%, 0% 25%);
-    clip-path: polygon(50% 0%, 100% 25%, 100% 75%, 50% 100%, 0% 75%, 0% 25%);
-  }
-  .hex:hover {    
+canvas
+{
     
-    -webkit-transform: scale(1.1);
-    -ms-transform: scale(1.1);
-    transform: scale(1.025);
-}
-
-  
-  .hex:first-child {
-    grid-row-start: 1;
-    grid-column: 2 / span 2;
-  }
-  
-  .hex:nth-child(2) {
-    grid-row-start: 1;
-    grid-column: 4 / span 2;
-  }
-  
-  .hex:nth-child(3) {
-    grid-row-start: 1;
-    grid-column: 6 / span 2;
-  }
-  
-  .hex:nth-child(4) {
-    grid-row-start: 3;
-    grid-column: 4 / span 2;
-  }
-  
-  .hex:nth-child(5) {
-    grid-row-start: 2;
-    grid-column: 3 / span 2;
-  }
-  
-  .hex:nth-child(6) {
-    grid-row-start: 2;
-    grid-column: 5 / span 2;
-  }
-  
-  
-
-.hobbies {
-    position: absolute;
-    margin-top: -28%;
-    margin-left: 16%;
-    transform: rotate(-30deg);
-}
-
-.hobbies-heading {
-    height: 16rem;
-
+    width: 100%;
 }
