--- a/css/style.css
+++ b/css/style.css
@@ -189,9 +189,12 @@ a {
 
 
 @media only screen and (max-width: 600px) {
-  .myname {
-    margin-left: -17%;
+  .myname {    
+    display: inline-block;  
+    margin-right: auto;
+    margin-left: 10px;
     top: 30%;
+    width: 400px;
   }
 
   .navbar-toggler {
@@ -242,7 +245,34 @@ a {
     margin: 0 0 10px 0;
   }
 }
+@media only screen and (max-width:393px) 
+{
+  .myname {
+    top: 30%;
+    margin-left: -19%;
+    margin-right: auto;
+    width: 90%;
+  }
 
+  .navbar-toggler {
+    margin-bottom: 10px;
+  }
+
+  .navbar-dark .navbar-toggler {
+    color: #000;
+    border: none;
+  }
+
+  .about-me>div {
+    width: 100%;
+    height: 100%;
+  }
+
+  .about-me-card-body {
+    width: 95%;
+    margin: 0 0 10px 0;
+  }
+}
 
 
 
