--- a/css/style.css
+++ b/css/style.css
@@ -13,7 +13,7 @@ body {
   padding: 0;
   box-sizing: border-box;
   overflow-x: hidden;
-  background-color: #2a2c2c !important;
+  background-color: #000 !important;
 }
 
 .conatiner-fluid {
