--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,6 @@
+html,body{
+  overflow-x: hidden;
+}
 :root {
   --copper: #FF9839;
   --basic-text-color: #DCDBDB;
@@ -614,6 +617,9 @@ color: var(--copper);
 
 
 @media only screen and (max-width: 600px) {
+  html,body{
+    overflow-x: hidden;
+  }
   .myname {
 
     padding-top: 60%;
