--- a/css/style.css
+++ b/css/style.css
@@ -628,7 +628,11 @@ color: var(--copper);
   .landing-section
   {
     height: fit-content;
-    background-color: #000;
+    background-color: #000 !important;
+  }
+  .element
+  {
+    background-color: #000 !important;
   }
   .content-container {
     flex-direction: column-reverse;
